--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,38 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-.mapa{
+/* .mapa{
   background-image: url('/public/assets/images/pixilart-drawing.png');
   width: 700px;
   height: 700px;
   position: relative;
-}
+} */
+
+@keyframes diabo {
+    from{
+      background-position-x: 0px;
+    }
+    to{
+      background-position-x: -140px;
+    }
+  }
+
+@keyframes diaboG {
+    from{
+      background-position-x: 0px;
+    }
+    to{
+      background-position-x: -280px;
+    }
+  }
+
+  @keyframes trap {
+    from{
+      background-position-x: 0px;
+    }
+    to{
+      background-position-x: -139px;
+    }
+  }
+
 
