--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,22 @@
   color: white;
 }
 /* .mapa{
-  background-image: url('/public/assets/images/pixilart-drawing.png');
-  width: 700px;
-  height: 700px;
+  background-image: url('/public/assets/images/level4.gif');
+  width: 960px;
+  height: 960px;
   position: relative;
+}
+
+.hero{
+  background-image: url('/public/assets/images/wizzard2.png');
+}
+
+.dm{
+  background-image: url('/public/assets/images/orc.png');
+}
+
+.md{
+  background-image: url('/public/assets/images/mini-orc.png');
 } */
 
 @keyframes diabo {
@@ -20,7 +32,7 @@
       background-position-x: 0px;
     }
     to{
-      background-position-x: -140px;
+      background-position-x: -192px;
     }
   }
 
@@ -29,7 +41,7 @@
       background-position-x: 0px;
     }
     to{
-      background-position-x: -280px;
+      background-position-x: -384px;
     }
   }
 
