:bug: fix: Mobs ficam embaixo da parede inferior

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,9 @@
 .trap{
   background-image: url('/public/assets/images/trap.png');
 }
+.joca{
+  background-image: url('/public/assets/images/CWB2.png');
+}
 
 @keyframes diabo {
     from{
